--- a/style.css
+++ b/style.css
@@ -34,6 +34,22 @@ header span {
 	left: 50%;
 }
 
+.sub-title {
+	font-family: Lato, serif;
+	font-weight: 200;
+	font-size: 26px;
+	text-transform: lowercase;
+	font-style: italic;
+	letter-spacing: 0px;
+	position: absolute;
+	top: 100%;
+	margin: -26px 0 0 -200px;
+	left: 50%;
+	background-color: black;
+	padding: 7px 20px 7px 20px;
+	margin-bottom: 5px;
+}
+
 section {
 	margin: 90px 50px 90px 50px;
 	width: 400px;
@@ -74,7 +90,7 @@ a:hover {
 
 @media (max-width: 1677px) {
 
-	header { 
+	header {
 	position: relative;
 	width: 100%;
 	height: 400px;
@@ -93,11 +109,11 @@ a:hover {
 	}
 }
 
-@media (max-width: 800px) { 
+@media (max-width: 800px) {
 
 	section {
 
-		margin: 30px 30px 30px -10px;
+		margin: 75px 30px 30px -10px;
 	}
 
 	header {
